WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73947
GC zapping logic could benefit from some more assertions
https://bugs.webkit.org/show_bug.cgi?id=73947
Summary
GC zapping logic could benefit from some more assertions
Filip Pizlo
Reported
2011-12-06 13:34:52 PST
Patch forthcoming
Attachments
the patch
(2.30 KB, patch)
2011-12-06 13:37 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-12-06 13:37:01 PST
Created
attachment 118103
[details]
the patch
Gavin Barraclough
Comment 2
2011-12-06 13:45:36 PST
Comment on
attachment 118103
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=118103&action=review
> Source/JavaScriptCore/heap/MarkedBlock.h:293 > + }
This could be: ASSERT(!isZapped(cell) || !m_marks.get(atomNumber(cell))); return !isZapped(cell);
WebKit Review Bot
Comment 3
2011-12-06 13:51:39 PST
Attachment 118103
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/heap/MarkedBlock.h:285: An else statement can be removed when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 4
2011-12-06 14:13:11 PST
Landed in
http://trac.webkit.org/changeset/102179
Filip Pizlo
Comment 5
2011-12-06 14:13:23 PST
Comment on
attachment 118103
[details]
the patch Clearing flags.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug