GC zapping logic could benefit from some more assertions https://bugs.webkit.org/show_bug.cgi?id=73947

Reviewed by Gavin Barraclough.

- If you're in a zapped block and you're zapped, then your mark bit should
  never be set.

- If you're being marked, then you should never be zapped.

* heap/MarkedBlock.h:
(JSC::MarkedBlock::isLive):
* runtime/Structure.h:
(JSC::MarkStack::internalAppend):



Canonical link: https://commits.webkit.org/90622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102179 268f45cc-cd09-0410-ab3c-d52691b4dbfc